<resources>
    <string name="app_name">AJIO</string>
    <string name="my_account">My Account</string>
    <string name="sign_in_join">Sign in / Join</string>
    <string name="return_creation_demo">Return Creation Demo</string>
    <string name="notifications">Notifications</string>
    <string name="game_zone">Game Zone</string>
    <string name="customer_care">Customer Care</string>
    <string name="how_to_return">How To Return</string>
    <string name="how_do_i_redeem_my_coupon">How Do I Redeem My Coupon</string>
    <string name="promotions_terms_and_conditions">Promotions Terms And Conditions</string>
    <string name="terms_and_conditions">Terms And Conditions</string>
    <string name="returns_and_refunds_policy">Returns And Refunds Policy</string>
    <string name="we_respect_your_privacy">We Respect Your Privacy</string>
    <string name="fees_and_payments">Fees And Payments</string>
    <string name="who_we_are">Who We Are</string>
    <string name="join_our_team">Join Our Team</string>
    <string name="login_join">Login/Join</string>
    <string name="continue_n_shopping">Continue Shopping</string>
    <string name="empty_bag_desc">Sign in to link products in your account or view \n products already in your wishlist or bag</string>
    <string name="version_1_0_build_0001">Version 1.0 Build 0001</string>
    <string name="home">Home</string>
    <string name="stores">Stores</string>
    <string name="account">Account</string>
    <string name="wishlist">Wishlist</string>
    <string name="bag">Bag</string>
    <string name="your_bag_is_empty">Your bag is empty</string>
    <string name="your_wishlist_is_empty">Your wishlist is empty</string>
    <string name="disc">Hang your wishes where you can make them come true.</string>
    <string name="enter_mobile_number">Enter Mobile Number</string>
    <string name="use_e_mail_id">Use E-mail ID</string>
    <string name="or_continue_with_social_account">Or continue with social account</string>
    <string name="terms">By signing up/logging in, I agree to</string>
    <string name="all">All</string>
    <string name="order_updates">Order Updates</string>
    <string name="promotions">Promotions</string>
    <string name="edit">Edit</string>
    <string name="ajio">ajio</string>
    <string name="search_hint">Search by Product, Brand and more</string>
    <string name="shop_by">Shop by</string>
    <string name="women">Women</string>
    <string name="men">Men</string>
    <string name="kids">Kids</string>
    <string name="home_and_kitchen">Home And Kitchen</string>
    <string name="indie_the_artisan_store">Indie (the Artisan Store)</string>
    <string name="jewellery">Previous Jwellary</string>
    <string name="sneakerHood">SneakerHood</string>
    <string name="new_arrivals">New Arrivals</string>
    <string name="select_a_store">Select A Store</string>
    <string name="your_online_aisle_of_style_desc">Your Online Aisle Of Style</string>
    <string name="ajio_luxe">AJIO LUXE</string>
    <string name="international_amp_luxury_products"><![CDATA[International & Luxury Products]]></string>
    <string name="current_amount">Balance: &#x20B9;</string>
    <string name="_2345_products">2345 Products</string>
    <string name="under_rs_9999">Under Rs 9999</string>
    <string name="sort_by">SORT BY</string>
    <string name="category">CATEGORY</string>
    <string name="filters">FILTERS</string>
    <string name="excel">Excel</string>
    <string name="delivery_info">Delivery expected by Tomorrow</string>
    <string name="about">This is a project based application only\nApp Version 2.0.8</string>
    <string name="ins">Application is under maintenance\nPlease check back after some time.</string>
</resources>