<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/dark_white"
    tools:context=".activity.AccountActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/rl_my_account_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/dp_15"
            android:background="@color/white">

            <TextView
                android:id="@+id/tv_my_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/my_account"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_18"
                android:textStyle="bold" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_user_info"
            android:layout_width="match_parent"
            android:padding="@dimen/dp_20"
            android:layout_height="wrap_content"
            android:background="@color/lime_white">

            <RelativeLayout
                android:layout_width="@dimen/dp_100"
                android:layout_height="@dimen/dp_100"
                android:layout_centerVertical="true"
                android:background="@drawable/account_logo_circle">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:src="@drawable/ic_account"
                    tools:ignore="ContentDescription" />

            </RelativeLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:backgroundTint="@color/black"
                app:cornerRadius="@dimen/dp_5"
                android:layout_centerVertical="true"
                android:text="@string/sign_in_join"
                android:textAllCaps="false"
                android:textStyle="bold"
                tools:ignore="RelativeOverlap" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/btn_customer_care"
                android:layout_width="match_parent"
                android:background="@color/white"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dp_1"
                android:padding="@dimen/dp_12"
                android:text="@string/customer_care"
                android:textColor="@color/black"
                app:drawableEndCompat="@drawable/ic_chevron_right_" />

            <TextView
                android:id="@+id/btn_game_zone"
                android:layout_width="match_parent"
                android:background="@color/white"
                android:layout_height="wrap_content"
                android:padding="@dimen/dp_12"
                android:text="@string/game_zone"
                android:textColor="@color/black"
                app:drawableEndCompat="@drawable/ic_chevron_right_" />

            <TextView
                android:id="@+id/btn_notification"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_6"
                android:background="@color/white"
                android:layout_marginBottom="@dimen/dp_6"
                android:padding="@dimen/dp_12"
                android:text="@string/notifications"
                android:textColor="@color/black"
                app:drawableEndCompat="@drawable/ic_chevron_right_" />

            <TextView
                android:id="@+id/btn_return_demo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/dp_12"
                android:background="@color/white"
                android:layout_marginBottom="@dimen/dp_1"
                android:text="@string/return_creation_demo"
                android:textColor="@color/black"
                app:drawableEndCompat="@drawable/ic_chevron_right_" />

            <TextView
                android:id="@+id/btn_how_to_return"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/dp_12"
                android:layout_marginBottom="1dp"
                android:background="@color/white"
                android:text="@string/how_to_return"
                android:textColor="@color/black"
                app:drawableEndCompat="@drawable/ic_chevron_right_" />

            <TextView
                android:id="@+id/btn_how_redeem_coupan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/dp_12"
                android:background="@color/white"
                android:layout_marginBottom="@dimen/dp_1"
                android:text="@string/how_do_i_redeem_my_coupon"
                android:textColor="@color/black"
                app:drawableEndCompat="@drawable/ic_chevron_right_" />

            <TextView
                android:id="@+id/btn_terms"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/dp_12"
                android:background="@color/white"
                android:layout_marginBottom="@dimen/dp_1"
                android:text="@string/terms_and_conditions"
                android:textColor="@color/black"
                app:drawableEndCompat="@drawable/ic_chevron_right_" />

            <TextView
                android:id="@+id/btn_promotions_terms_conditions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/dp_12"
                android:layout_marginBottom="@dimen/dp_1"
                android:background="@color/white"
                android:text="@string/promotions_terms_and_conditions"
                android:textColor="@color/black"
                app:drawableEndCompat="@drawable/ic_chevron_right_" />

            <TextView
                android:id="@+id/btn_refunds_returns"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/dp_12"
                android:layout_marginBottom="@dimen/dp_1"
                android:background="@color/white"
                android:text="@string/returns_and_refunds_policy"
                android:textColor="@color/black"
                app:drawableEndCompat="@drawable/ic_chevron_right_" />

            <TextView
                android:id="@+id/btn_respect_privacy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/dp_12"
                android:layout_marginBottom="@dimen/dp_1"
                android:background="@color/white"
                android:text="@string/we_respect_your_privacy"
                android:textColor="@color/black"
                app:drawableEndCompat="@drawable/ic_chevron_right_" />

            <TextView
                android:id="@+id/btn_fees_payments"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/dp_12"
                android:layout_marginBottom="@dimen/dp_1"
                android:background="@color/white"
                android:text="@string/fees_and_payments"
                android:textColor="@color/black"
                app:drawableEndCompat="@drawable/ic_chevron_right_" />

            <TextView
                android:id="@+id/btn_who_we_are"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/dp_12"
                android:layout_marginBottom="@dimen/dp_1"
                android:background="@color/white"
                android:text="@string/who_we_are"
                android:textColor="@color/black"
                app:drawableEndCompat="@drawable/ic_chevron_right_" />

            <TextView
                android:id="@+id/btn_join_team"
                android:layout_width="match_parent"
                android:background="@color/white"
                android:layout_height="wrap_content"
                android:padding="@dimen/dp_12"
                android:layout_marginBottom="@dimen/dp_1"
                android:text="@string/join_our_team"
                android:textColor="@color/black"
                app:drawableEndCompat="@drawable/ic_chevron_right_" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:padding="@dimen/dp_12"
                android:layout_marginBottom="@dimen/dp_1"
                android:textSize="@dimen/sp_12"
                android:gravity="center"
                android:text="@string/version_1_0_build_0001"
                android:textColor="#C0C0C0" />

        </LinearLayout>
    </LinearLayout>
</ScrollView>