<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".fragment.BottomSheetFragment">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/dp_25">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/select_a_store"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_18"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_33"
                android:text="@string/ajio"
                android:textAllCaps="true"
                android:textColor="@color/jio_color"
                android:textSize="@dimen/sp_40"
                android:textStyle="bold"
                app:drawableEndCompat="@drawable/ic_icons8_checked" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/your_online_aisle_of_style_desc" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_1"
                android:layout_marginTop="@dimen/dp_33"
                android:background="@color/dark" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_33"
                android:text="@string/ajio_luxe"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_40"
                android:textStyle="bold"
                app:drawableEndCompat="@drawable/ic_baseline_arrow_forward_24" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/international_amp_luxury_products" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>