<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.NavigationActivity">

    <RelativeLayout
        android:id="@+id/top_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50">

        <ImageButton
            android:id="@+id/ib_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/dp_10"
            android:background="@color/white"
            android:src="@drawable/ic_clear"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/tv_ajio_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/ajio"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_20"
            android:textStyle="bold"
            tools:ignore="RelativeOverlap" />

        <ImageButton
            android:id="@+id/ib_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/dp_60"
            android:background="@color/white"
            android:src="@drawable/ic_home_svg"
            tools:ignore="ContentDescription" />

        <ImageButton
            android:id="@+id/ib_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/dp_20"
            android:background="@color/white"
            android:src="@drawable/ic_search_2"
            tools:ignore="ContentDescription" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/ll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/img_ajio_luxe"
        android:layout_below="@id/top_layout"
        android:background="@color/lime_white"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_10"
            android:text="@string/shop_by"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_18" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_10"
            android:background="@color/lime_white"
            android:padding="@dimen/dp_10"
            app:cardCornerRadius="@dimen/dp_10">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/menu_scrollview_rect"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_women"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/dp_60"
                        android:background="@color/white"
                        android:drawablePadding="@dimen/dp_20"
                        android:padding="@dimen/dp_12"
                        android:text="@string/women"
                        android:textColor="@color/black"
                        android:textSize="@dimen/sp_18"
                        app:drawableEndCompat="@drawable/ic_chevron_right_"
                        app:drawableStartCompat="@drawable/ic_woman_svgrepo_com" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/dp_1"
                        android:background="@color/dark" />

                    <TextView
                        android:id="@+id/tv_men"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/dp_60"
                        android:background="@color/white"
                        android:drawablePadding="@dimen/dp_20"
                        android:padding="@dimen/dp_12"
                        android:text="@string/men"
                        android:textColor="@color/black"
                        android:textSize="@dimen/sp_18"
                        app:drawableEndCompat="@drawable/ic_chevron_right_"
                        app:drawableStartCompat="@drawable/ic_man_svgrepo_com" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/dp_1"
                        android:background="@color/dark" />

                    <TextView
                        android:id="@+id/tv_kids"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/dp_60"
                        android:background="@color/white"
                        android:drawablePadding="@dimen/dp_20"
                        android:padding="@dimen/dp_12"
                        android:text="@string/kids"
                        android:textColor="@color/black"
                        android:textSize="@dimen/sp_18"
                        app:drawableEndCompat="@drawable/ic_chevron_right_"
                        app:drawableStartCompat="@drawable/ic_baby_svgrepo_com" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/dp_1"
                        android:background="@color/dark" />

                    <TextView
                        android:id="@+id/tv_home_kitchen"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/dp_60"
                        android:background="@color/white"
                        android:drawablePadding="@dimen/dp_20"
                        android:padding="@dimen/dp_12"
                        android:text="@string/home_and_kitchen"
                        android:textColor="@color/black"
                        android:textSize="@dimen/sp_18"
                        app:drawableEndCompat="@drawable/ic_chevron_right_"
                        app:drawableStartCompat="@drawable/ic_home_repair_svgrepo_com" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/dp_1"
                        android:background="@color/dark" />

                    <TextView
                        android:id="@+id/tv_stores"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/dp_60"
                        android:background="@color/white"
                        android:drawablePadding="@dimen/dp_20"
                        android:padding="@dimen/dp_12"
                        android:text="@string/stores"
                        android:textColor="@color/black"
                        android:textSize="@dimen/sp_18"
                        app:drawableEndCompat="@drawable/ic_chevron_right_"
                        app:drawableStartCompat="@drawable/ic_shop_store_svgrepo_com" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/dp_1"
                        android:background="@color/dark" />

                    <TextView
                        android:id="@+id/tv_indie_artisan"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/dp_60"
                        android:background="@color/white"
                        android:drawablePadding="@dimen/dp_20"
                        android:padding="@dimen/dp_12"
                        android:singleLine="true"
                        android:text="@string/indie_the_artisan_store"
                        android:textColor="@color/black"
                        android:textSize="@dimen/sp_18"
                        app:drawableEndCompat="@drawable/ic_chevron_right_"
                        app:drawableStartCompat="@drawable/ic_flower_svgrepo_com" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/dp_1"
                        android:background="@color/dark" />

                    <TextView
                        android:id="@+id/tv_jewellery"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/dp_60"
                        android:background="@color/white"
                        android:drawablePadding="@dimen/dp_20"
                        android:padding="@dimen/dp_12"
                        android:text="@string/jewellery"
                        android:textColor="@color/black"
                        android:textSize="@dimen/sp_18"
                        app:drawableEndCompat="@drawable/ic_chevron_right_"
                        app:drawableStartCompat="@drawable/ic_earrings_svgrepo_com" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/dp_1"
                        android:background="@color/dark" />

                    <TextView
                        android:id="@+id/tv_sneaker"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/dp_60"
                        android:background="@color/white"
                        android:drawablePadding="@dimen/dp_20"
                        android:padding="@dimen/dp_12"
                        android:text="@string/sneakerHood"
                        android:textColor="@color/black"
                        android:textSize="@dimen/sp_18"
                        app:drawableEndCompat="@drawable/ic_chevron_right_"
                        app:drawableStartCompat="@drawable/ic_sneaker_svgrepo_com" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/dp_1"
                        android:background="@color/dark" />

                    <TextView
                        android:id="@+id/tv_new_arrivals"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/dp_60"
                        android:background="@color/white"
                        android:drawablePadding="@dimen/dp_20"
                        android:padding="@dimen/dp_12"
                        android:text="@string/new_arrivals"
                        android:textColor="@color/black"
                        android:textSize="@dimen/sp_18"
                        app:drawableEndCompat="@drawable/ic_chevron_right_"
                        app:drawableStartCompat="@drawable/ic_new_svgrepo_com" />

                </LinearLayout>
            </ScrollView>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <ImageView
        android:id="@+id/img_ajio_luxe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:layout_above="@+id/about"
        android:onClick="onProductClick"
        android:src="@drawable/ajio_lux"
        tools:ignore="ContentDescription,UsingOnClickInXml" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/about"
        android:id="@+id/about"
        android:onClick="onAboutClick"
        android:background="@color/lime_white"
        android:textAlignment="center"
        android:textSize="10sp"
        tools:ignore="SmallSp,UsingOnClickInXml" />

</RelativeLayout>