<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.NotificationActivity">

    <RelativeLayout
        android:id="@+id/rl_topbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_60">

        <ImageButton
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:background="@color/white"
            android:paddingLeft="@dimen/dp_12"
            android:src="@drawable/ic_clear" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/notifications"
            android:textColor="@color/black"
            android:textStyle="bold" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/lr_button_switcher"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/rl_topbar"
        android:layout_marginStart="@dimen/dp_12"
        android:layout_marginEnd="@dimen/dp_12"
        android:background="@drawable/notif_middle_button"
        android:orientation="horizontal"
        android:weightSum="3">

        <TextView
            android:id="@+id/btn_all"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/black"
            android:padding="@dimen/dp_5"
            android:gravity="center"
            android:text="@string/all"
            android:textAllCaps="false"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/btn_orders"
            android:layout_width="@dimen/dp_0"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:padding="@dimen/dp_5"
            android:gravity="center"
            android:enabled="false"
            android:text="@string/order_updates"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="@dimen/dp_12" />

        <TextView
            android:id="@+id/btn_promotions"
            android:layout_width="@dimen/dp_0"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/black"
            android:backgroundTint="@color/black"
            android:padding="@dimen/dp_5"
            android:gravity="center"
            android:text="@string/promotions"
            android:textAllCaps="false"
            android:textColor="@color/white" />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/lr_button_switcher"
        android:layout_margin="@dimen/dp_12"
        android:background="@color/white"
        android:scrollIndicators="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_33">

                <ImageButton
                    android:id="@+id/cv_notifi_1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:background="@drawable/notifi_image_back"
                    android:scaleType="fitXY"
                    android:src="@drawable/n1" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_33">

                <ImageButton
                    android:id="@+id/iv_notifi_2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:background="@drawable/notifi_image_back"
                    android:scaleType="fitXY"
                    android:src="@drawable/n2" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_33">

                <ImageButton
                    android:id="@+id/iv_notifi_3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:background="@drawable/notifi_image_back"
                    android:scaleType="fitXY"
                    android:src="@drawable/n3" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_33">

                <ImageButton
                    android:id="@+id/iv_notifi_4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:background="@drawable/notifi_image_back"
                    android:scaleType="fitXY"
                    android:src="@drawable/n4" />
            </androidx.cardview.widget.CardView>

        </LinearLayout>
    </ScrollView>
</RelativeLayout>